--- a/demo-website/index.css
+++ b/demo-website/index.css
@@ -3,6 +3,7 @@
 body {
     font-size: 16px;
     padding:20px 40px;
+    font-family:'Lucida Console', monospace;
 }
 .button {
   --b: 3px;   /* border thickness */
