--- a/demo-website/index.css
+++ b/demo-website/index.css
@@ -1,24 +1,28 @@
-
 /* CSS */
 body {
-    font-size: 16px;
-    padding:20px 40px;
-    font-family:'Lucida Console', monospace;
+  font-size: 16px;
+  padding: 20px 40px;
+  font-family: 'Lucida Console', monospace;
 }
+/* source: https://getcssscan.com/css-buttons-examples */
 .button {
-  --b: 3px;   /* border thickness */
-  --s: .45em; /* size of the corner */
-  --color: #373B44;
-  
-  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  --b: 3px; /* border thickness */
+  --s: 0.45em; /* size of the corner */
+  --color: #373b44;
+
+  padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
   color: var(--color);
   --_p: var(--s);
-  background:
-    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
-    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
-  transition: .3s linear, color 0s, background-color 0s;
+  background: conic-gradient(
+      from 90deg at var(--b) var(--b),
+      #0000 90deg,
+      var(--color) 0
+    )
+    var(--_p) var(--_p) / calc(100% - var(--b) - 2 * var(--_p))
+    calc(100% - var(--b) - 2 * var(--_p));
+  transition: 0.3s linear, color 0s, background-color 0s;
   outline: var(--b) solid #0000;
-  outline-offset: .6em;
+  outline-offset: 0.6em;
   font-size: 16px;
 
   border: 0;
@@ -30,10 +34,10 @@ body {
 }
 
 .button:hover,
-.button:focus-visible{
+.button:focus-visible {
   --_p: 0px;
   outline-color: var(--color);
-  outline-offset: .05em;
+  outline-offset: 0.05em;
 }
 
 .button:active {
@@ -42,6 +46,6 @@ body {
 }
 
 .startLine {
-    font-size:18px;
-    font-weight: bolder;
+  font-size: 18px;
+  font-weight: bolder;
 }
